# champ-r

./: .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.js  .prettierrc.toml  .yarnrc  .yarnrc.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  README_zh.md  analytics.js  bsconfig.json  build.rs  champr.exe.manifest  electron-builder.yml  index.html  index.js  justfile  main.js  menu.js  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml  readme.md  rune.html  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.cargo/: config
.github/ISSUE_TEMPLATE/: bug-report----bug.md  bug_report.md
.github/workflows/: build.yml  data-sources.yml  main.yml  nightly.yml  publish-aram.yml  publish-sr.yml  publish-urf.yml  publish_lolalytics-aram.yml  publish_lolalytics-urf.yml  publish_lolalytics.yml  publish_murderbridge.yml  publish_op.gg-aram.yml  publish_op.gg-urf.yml  publish_op.gg.yml  publish_u.gg-aram.yml  publish_u.gg.yml  release.yml  scheduled-publish.yml  test.yml  trigger-publish_aram.yml  trigger-publish_sr.yml  trigger-publish_urf.yml
.husky/: pre-commit
app/: config.ts  dev.js  file.ts  global.d.ts  langs.ts  listeners.ts  main.ts  preload.ts  sources.ts  tray.ts  tsconfig.json  updater.ts  utils.ts
app/constants/: events.ts  lcu.ts  sources.ts
app/service/: cmd.ts  config.ts  file.ts  index.ts  lcu.ts  ws.ts
app/utils/: cmd.ts  config.ts  file.ts  index.ts  lcu.ts  logger.ts  ws.ts
config/: env.js  getHttpsConfig.js  modules.js  paths.js  pnpTs.js  webpack.config.js  webpackDevServer.config.js
config/jest/: cssTransform.js  fileTransform.js
config/plugins/: replace-css-url-ext.js
crates/app/: Cargo.toml  build.rs
crates/app/src/: main.rs  style.css
crates/app/ui/: app.slint
crates/gui/: Cargo.toml
crates/gui/src/: config.rs  lib.rs  rune_ui.rs  rune_viewport.rs  source_ui.rs  toggle_ui.rs  ui.rs  wind.rs
crates/lcu/: Cargo.toml
crates/lcu/src/: api.rs  asset_loader.rs  builds.rs  cmd.rs  constants.rs  lcu_api.rs  lcu_error.rs  lib.rs  source.rs  task.rs  ureq_agent.rs  web.rs
crates/rune_gui/: Cargo.toml
crates/rune_gui/src/: lib.rs  main.rs  ui.rs  viewport.rs
crates/rune_ui/: Cargo.toml
crates/rune_ui/src/: lib.rs  viewport.rs
crates/rune_window/: Cargo.toml
crates/rune_window/src/: lib.rs
crates/source_gui/: Cargo.toml  build.rs
crates/source_gui/src/: lib.rs  main.rs  ui.rs
crates/source_gui/src/lcu/: api.rs
crates/source_window/: Cargo.toml
crates/source_window/src/: builds.rs  source.rs
interfaces/: commonTypes.d.ts
patches/: run-electron+1.0.0.patch
public/: index.html  popup.html  statistics.html
scripts/: build.js  modify-build-version.js  sleep.js  start.js  test.js
src/: App.js  Index.res  app.js  app.module.scss  app.tsx  build.rs  builds.rs  cmd.rs  components.rs  config.rs  config.ts  context.js  fonts.rs  global.d.ts  helper.ts  index.css  index.js  index.scss  index.tsx  interfaces.d.ts  lcu.rs  main.res  main.rs  main.tsx  popup.index.tsx  popup.main.tsx  serviceWorker.js  setupTests.js  source.rs  source_item.rs  sources.rs  statistics.index.tsx  store.ts  styles.rs  tsconfig.json  types.d.ts  ui.rs  ui_rune.rs  util.rs  utils.rs  (+3 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  champr-manifest.rc  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: builds.rs  cmd.rs  commands.rs  lcu.rs  main.rs  page_data.rs  rune_window.rs  settings.rs  state.rs  web.rs  window.rs  ws.rs
src/assets/fonts/: fonts.css  fonts.scss
src/bindings/: ElectronContextMenu.res  ElectronLog.res  ElectronReloader.res  ElectronStore.res  I18n.res  Node.res
src/components/: modal.rs
src/components/champion-table/: index.js  style.module.scss
src/components/footer/: index.js  index.tsx  style.module.scss
src/components/loading-spinner/: index.js  index.tsx  style.module.scss
src/components/perk-showcase/: index.js  index.tsx  style.module.scss
src/components/progress-bar/: index.js  use-interval.js
src/components/rune-preview/: index.js  index.tsx  style.module.scss
src/components/toolbar/: index.js  index.tsx  style.module.scss
src/components/ui/: Button.tsx  Checkbox.tsx  Label.tsx  Menubar.tsx  NavigationMenu.tsx  Select.tsx  Separator.tsx  Switch.tsx  Tabs.tsx  Tooltip.tsx
src/components/use-ga/: index.js
src/components/waiting-list/: index.js  index.tsx  style.module.scss
src/lcu/: api.rs  client.rs  util.rs
src/lib/: utils.ts
src/modules/home/: index.js  index.tsx  useSourceList.tsx
src/modules/i18n/: AppI18n.res  en-us.js  en-us.ts  fr-fr.ts  index.js  index.ts  zh-cn.js  zh-cn.ts
src/modules/import/: index.js  index.tsx  style.module.scss
src/modules/popup/: content.tsx  index.js  index.tsx  main.tsx  style.module.scss  utils.js  utils.ts
src/modules/settings/: index.js  index.tsx  style.module.scss
src/modules/statistics/: content.tsx  index.tsx  style.module.scss  toolbar.tsx  utils.ts
src/native/: AppConfig.res  AppLogger.res  config.js  config.res  config.ts  langs.ts  logger.js  logger.res  logger.ts
src/service/: ddragon.js  ddragon.ts  http.js  http.ts  ipc.ts  lcu.js  lcu.ts  op-gg.js  qq.js  utils.js
src/service/data-source/: 101-qq.js  README.md  cdn-service.ts  constants.js  lol-qq.js  murderbridge.js  murderbridge.ts  npm-service.ts  op-gg.js  op-gg.ts  source-proto.js  (+1 more)
src/share/: actions.js  actions.ts  context.js  context.ts  file.js  file.ts  logger.ts  reducer.js  reducer.ts  sources.js  types.ts
src/styles/: button.rs  style_tuple.rs
src/typings/: Electron.res  ElectronLog.res  ElectronReloader.res  ElectronStore.res  ElectronUpdater.res  ElectronUtil.res  Node.res  NodeMachineId.res  commonTypes.ts
ui/: appwindow.slint  global_settings.slint  main.slint  sidebar.slint
ui/pages/: about.slint  index.slint  page.slint  source_list.slint
v2/: .gitignore  package.json  pnpm-lock.yaml  rune.html  vite.config.ts
v2/src/: App.tsx  main.tsx
v2/src-tauri/: Cargo.toml
v2/src-tauri/src/: builds.rs  commands.rs  main.rs  rune_window.rs  web.rs
(+35 files in other folders)
