[package]
name = "champr"
version = "2.0.2"
edition = "2021"
build = "build.rs"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[dependencies]
anyhow = "1.0.71"
bytes = "*"
base64 = "0.21.0"
futures = "0.3.28"
iced = { version = "0.10.0", features = ["tokio", "image", "palette", "advanced"] }
lazy_static = "1.4.0"
regex = "1.8.1"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
iced_native = "0.10.3"
image = "0.24.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-appender = "0.2.2"
lyon_algorithms = "1"
once_cell = "1"
toml = "0.7.6"
rand = "0.8.5"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.1"
winres = "0.1"
