[workspace]
resolver = "2"
members = [
    "crates/source_gui",
    "crates/rune_ui",
    "crates/app",
    "crates/lcu",
]

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
