[package]
name = "champr"
version = "2.0.0"
description = "Another League of Legends helper"
authors = ["Al Cheung<cangzan@gmail.com>"]
license = "LGPL-2.1 license"
repository = "https://github.com/cangzhang/champr-rs.git"
default-run = "champr"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^1", features = [] }
embed-resource = "1.7"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.1", features = ["api-all", "system-tray"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.4"
futures = "0.3"
anyhow = "1.0"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
rand = "0.8.5"
powershell_script = "1.0.4"
regex = "1.6.0"
lazy_static = "1.4.0"
futures-util = "0.3.23"
futures-channel = "0.3.23"
base64 = "0.13.0"
async-compression = { version = "0.3.14", features = ["futures-io", "gzip"] }
tar = "0.4.38"
window-shadows = { git = "https://github.com/tauri-apps/window-shadows", branch = "dev"}
tauri-plugin-store = { git = "https://github.com/tauri-apps/tauri-plugin-store", branch = "dev"}
serde_with = { version = "2.0", features = ["json"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
