[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lcu = { path = "../lcu" }
tokio = { version = "1.44.0", features = ["full"] }
futures = "0.3.28"
kv-log-macro = "1.0.7"
femme = "2.2.1"
slint = "1.9.0"
anyhow = "1.0.86"
image = "0.25.2"
arc-swap = "1.7.1"
rand = "0.8.5"
cushy = { git = "https://github.com/khonsulabs/cushy.git", branch = "main", features = ["tokio"] }

[build-dependencies]
slint-build = "1.8.0"
