[package]
name = "gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
lcu = { path = "../lcu" }
anyhow = "1.0.71"
bytes = "*"
base64 = "0.21.0"
futures = "0.3.28"
lazy_static = "1.4.0"
regex = "1.8.1"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
image = { version = "0.24.6", default-features = false, features = [
    "jpeg",
    "png",
] }
once_cell = "1"
toml = "0.7.4"
rand = "0.8.5"
eframe = { version = "0.25.0", features = [
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
egui_extras = { version = "0.25.0", features = ["all_loaders"] }
poll-promise = { version = "0.3.0", features = ["tokio"] }
kv-log-macro = "1.0.7"
femme = "2.2.1"
iced = { version = "0.12.1", features = ["multi-window", "debug" ] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.1"
winres = "0.1"
