[package]
name = "lcu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["json"] }
serde_derive = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-appender = "0.2.2"
regex = "1.8.1"
anyhow = "1.0.71"
bytes = "*"
base64 = "0.21.5"
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls", "blocking"] }
eframe = { version = "0.24.1", features = [
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
log = { version = "0.4", features = ["std"] }
url = "2.4.1"
ureq = "2.8.0"
rustls = { version = "0.21.8", features = ["dangerous_configuration"] }
webpki = "*"
webpki-roots = "0.25.2"
