[package]
name = "lcu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["json"] }
serde_derive = "1.0"
regex = "1.8.1"
anyhow = "1.0.71"
bytes = "*"
base64 = "0.21.5"
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking"] }
log = { version = "0.4", features = ["std"] }
url = "2.4.1"
image = "0.24.7"
rand = "0.8.5"
flate2 = "1.0.28"
tar = "0.4.40"
femme = "2.2.1"
kv-log-macro = "1.0.7"
powershell_script = "1.1.0"
nanoid = "0.4.0"
# vizia = { git = "https://github.com/vizia/vizia.git", rev = "7dccf72a9fe4e2c15569ce453e547fce49e20032" }
