[package]
name = "rune_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.23.0", features = [
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
env_logger = "0.10.0"
egui_extras = { version = "0.23.0", features = ["all_loaders"] }
tokio = { version = "1", features = ["full"] }
lcu = { path = "../lcu" }