[package]
name = "source_gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
lcu = { path = "../lcu" }
rune_ui = { path = "../rune_ui" }
anyhow = "1.0.71"
bytes = "*"
base64 = "0.21.0"
futures = "0.3.28"
lazy_static = "1.4.0"
regex = "1.8.1"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
image = { version = "0.24.6", default-features = false, features = [
    "jpeg",
    "png",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-appender = "0.2.2"
lyon_algorithms = "1"
once_cell = "1"
toml = "0.7.4"
rand = "0.8.5"
eframe = { version = "0.24.1", features = [
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
env_logger = "0.10.0"
egui_extras = { version = "0.24.0", features = ["all_loaders"] }
poll-promise = { version = "0.3.0", features = ["tokio"] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.1"
winres = "0.1"
